<resources>
    <string name="app_name">baskballsocre</string>
    <string name="textview1">Team A</string>
    <string name="textview2">Team B</string>
    <string name="textview4">0</string>
    <string name="textview3">0</string>
    <string name="button1">+1</string>
    <string name="button2">+2</string>
    <string name="button3">+3</string>
    <string name="todo">ss</string>
    <string name="a">a</string>
    <string name="textview5">1.0.0beta</string>
</resources>